Refactor GroupingSampleWithMultipleFields